--- a/config/local_env.yml
+++ b/config/local_env.yml
@@ -1,3 +1,3 @@
-#SENDMAIL_PASSWORD: password
-#SENDMAIL_USERNAME: something@gmail.com
-#MAIL_HOST: localhost:3000
+GMAIL_PASSWORD: 3CVcs1fbGQfX
+GMAIL_USERNAME: cs370.berkeley@gmail.com
+MAIL_HOST: localhost:3000
