--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: ruby
 rvm:
   - 2.5.3
-dist: trusty
+dist: xenial
 
 # make sure production-only gems are not installed
 bundler_args: --without production
