--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ dist: trusty
 # make sure production-only gems are not installed
 bundler_args: --without production
 
-before_install: gem install bundler
+before_install: 
+  - gem update --system
+  - sudo gem install bundler
 
 env:
   global:
