--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ dist: trusty
 bundler_args: --without production
 
 before_install: 
-  - gem install bundler --version '1.7.4'
+  - yes | gem update --system --force
+  - gem install bundler
 
 env:
   global:
